--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 10)
 Standards-Version: 4.4.1
 Vcs-Git: https://github.com/ltsp/binaries.git
 Vcs-Browser: https://github.com/ltsp/binaries/
-Homepage: https://ltsp.github.io
+Homepage: https://ltsp.org
 Rules-Requires-Root: no
 
 Package: ltsp-binaries
